<resources>
    <string name="app_name">to buy</string>
    <string name="add_new_category">Start by adding new category Now!!</string>
    <string name="add_category_textView_add_Name">Name</string>
    <string name="ex_refrigerator">Ex : Clothes</string>
    <string name="add_category_textView_add_related_to">Related to</string>
    <string name="ex_work">Ex : Work / home</string>
    <string name="add_category_textView_add_desc">Description</string>
    <string name="add_category_textView_add_extra">Extra information</string>
    <string name="action_bar_add_new_category">Add new Category</string>
    <string name="action_bar_save">Save</string>
    <string name="Delet">Delete</string>
    <string name="red_choice">Red</string>
    <string name="yellow_choice">Yellow</string>
    <string name="blue_choice">Blue</string>
    <string name="purple_choice">Purple</string>
    <string name="green_choice">Green</string>

    <!-- Toast message in editor when new pet has been successfully updated [CHAR LIMIT=NONE] -->
    <string name="insert_Category_successful">Category saved</string>
    <string name="insert_thing_successful">Your item is  saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="insert_Category_failed">Error with saving Category</string>
    <string name="insert_item_failed">Error with saving item</string>
    <string name="things_add_new_thing">Start by adding by new item to this category Now!!</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="want_to_delet">Are you sure you want to delete this whole Category?</string>
    <string name="want_to_delet_thing">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_bar_add_new_thing">Add new Item</string>
    <string name="price">Price</string>
    <string name="where_to_buy">Where to buy</string>
    <string name="ex_meat">Ex: T-shirt</string>
    <string name="ex_32">Ex: 32</string>
    <string name="ex_supermarket">Ex: clothing store</string>
    <string name="related_to">Related to:</string>
    <string name="related_toFiled" translatable="false">related to</string>
    <string name="name">Name:</string>
    <string name="nameField" translatable="false">name</string>
    <string name="buy_from">Buy from :</string>
    <string name="bought">Bought</string>
    <string name="created_at">Created at: </string>
    <string name="last_edit">Last edit:</string>
    <string name="description">Description:</string>
    <string name="extra">Extra:</string>
    <string name="statistics">Statistics</string>
    <string name="edit">"Edit: "</string>
    <string name="total">Total:</string>
    <string name="you_spent">You spent:</string>
    <string name="left_to_buy">Left to buy:</string>
    <string name="bought_with_dots">Bought:</string>
    <string name="not_bought_yet">Not bought yet:</string>
    <string name="common_where_to_buy">Common sellers:</string>
    <string name="reset">Reset</string>
    <string name="add_category">Add category</string>
    <string name="update_category">Update category</string>
    <string name="view_content_as">View content As</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="large_style">Large Style</string>
    <string name="categories_content">Categories Content</string>
    <string name="small_sytle">Small style</string>
    <string name="keyCategories_largeStyle">categories_largeStyle</string>
    <string name="keyCategories_smallStyle">categories_smallStyle</string>
    <string name="pos" translatable="false">pos</string>
    <string name="id" translatable="false">ID</string>
    <string name="editField">Edit</string>
    <string name="sure_delete">Are you sure you wat to delete this item?</string>
    <string name="is_bought">Is bought?</string>
    <string name="add_new_shop">Add new shop</string>
    <string name="zara">ex: Zara</string>
    <string name="address">Address:</string>
    <string name="ex_down_town">ex: Down town</string>
    <string name="facebook_link">Facebook Link</string>
    <string name="facebook_link_ex">https://facebook.com/example</string>
    <string name="notes">Notes: </string>
    <string name="not_today">Not today?</string>
    <string name="choose_from_existing_shops">Choose from existing shops</string>
    <string name="add_contact_to_that_shop">Add a contact to that shop</string>
    <string name="add_contact">Add contact</string>
    <string name="phone_number">phone number:</string>
    <string name="position">Position:</string>
    <string name="hr_or_manager_ex">HR/ Manager</string>
    <string name="ex_number">01213159</string>
    <string name="ahmed">Ahmed</string>
    <string name="ex_75">ex: 75</string>
    <string name="title_activity_main_">Main_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="all_shops">All shops</string>
    <string name="categories">Categories</string>
    <string name="all_contact">All contact</string>
    <string name="all_contacts">All contacts</string>
    <string name="view_usage">View usage</string>
</resources>
