<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wholeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="3dp"
            tools:context=".add_category">

            <LinearLayout style="@style/add_category_Linear">

                <TextView
                    style="@style/add_category_add_field"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="16dp"
                    android:text="@string/add_category_textView_add_Name" />

                <TextView
                    style="@style/add_category_add_field"
                    android:layout_gravity="center"
                    android:padding="0dp"
                    android:text="*"
                    android:textColor="@color/red" />

                <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
                    android:id="@+id/add_contact_name"
                    style="@style/add_category_add_field_edit"
                    android:hint="@string/ahmed"
                    android:completionHint="Select a name"
                    android:completionThreshold="1"
                    />


            </LinearLayout>

            <LinearLayout style="@style/add_category_Linear"

                >


                <TextView
                    style="@style/add_category_add_field"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="16dp"
                    android:text="@string/phone_number" />

                <TextView
                    style="@style/add_category_add_field"
                    android:layout_gravity="center"
                    android:padding="0dp"
                    android:text="*"
                    android:textColor="@color/red" />

                <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
                    android:id="@+id/add_contact_phoneNumber"
                    style="@style/add_category_add_field_edit"
                    android:hint="@string/ex_number"
                    android:inputType="phone"
                    android:completionHint="Select a country"
                    android:completionThreshold="1"
                    />

            </LinearLayout>

            <LinearLayout style="@style/add_category_Linear"

                >

                <TextView
                    style="@style/add_category_add_field"
                    android:text="@string/position" />

                <EditText
                    android:id="@+id/add_contact_position"
                    style="@style/add_category_add_field_edit"
                    android:hint="@string/hr_or_manager_ex" />

            </LinearLayout>

            <LinearLayout style="@style/add_category_Linear"

                >

                <TextView
                    style="@style/add_category_add_field"
                    android:text="@string/notes" />

                <EditText
                    android:id="@+id/add_contact_notes"
                    style="@style/add_category_add_field_edit"
                    android:hint="@string/notes" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

