<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp"
        tools:context=".add_category">

        <LinearLayout style="@style/add_category_Linear">

            <TextView
                style="@style/add_category_add_field"
                android:text="@string/add_category_textView_add_Name" />

            <EditText
                android:id="@+id/add_category_name"
                style="@style/add_category_add_field_edit"
                android:hint="@string/ex_refrigerator"

                />

        </LinearLayout>

        <LinearLayout style="@style/add_category_Linear">

            <TextView
                style="@style/add_category_add_field"
                android:text="@string/add_category_textView_add_related_to" />

            <EditText
                android:id="@+id/add_category_related_to"
                style="@style/add_category_add_field_edit"
                android:hint="@string/ex_work" />

        </LinearLayout>

        <LinearLayout style="@style/add_category_Linear"

            >

            <TextView
                style="@style/add_category_add_field"
                android:text="@string/add_category_textView_add_desc" />

            <EditText
                android:id="@+id/add_category_desc"
                style="@style/add_category_add_field_edit"
                android:hint="@string/add_category_textView_add_desc" />

        </LinearLayout>

        <LinearLayout style="@style/add_category_Linear"

            >

            <TextView
                style="@style/add_category_add_field"
                android:text="@string/add_category_textView_add_extra" />

            <EditText
                android:id="@+id/add_category_extra"
                style="@style/add_category_add_field_edit"
                android:hint="@string/add_category_textView_add_extra" />

        </LinearLayout>


        <LinearLayout
            style="@style/add_category_Linear"
            android:orientation="horizontal">

            <RelativeLayout style="@style/add_category_Relative">

                <ImageView
                    android:id="@+id/add_category_red"
                    style="@style/add_category_color"
                    android:background="@drawable/circle_red" />
            </RelativeLayout>

            <RelativeLayout style="@style/add_category_Relative"
                >

                <ImageView
                    style="@style/add_category_color"
                    android:background="@drawable/circle_yellow"
                    android:id="@+id/add_category_yellow"
                    />
            </RelativeLayout>

            <RelativeLayout style="@style/add_category_Relative"

                >

                <ImageView
                    style="@style/add_category_color"
                    android:background="@drawable/circle_blue"
                    android:id="@+id/add_category_blue"
                    />
            </RelativeLayout>

            <RelativeLayout style="@style/add_category_Relative">

                <ImageView
                    style="@style/add_category_color"
                    android:background="@drawable/circle_purple"
                    android:id="@+id/add_category_purple"
                    />
            </RelativeLayout>

            <RelativeLayout style="@style/add_category_Relative"

                >

                <ImageView
                    style="@style/add_category_color"
                    android:background="@drawable/circle_green"
                    android:id="@+id/add_category_green"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


</ScrollView>
