<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/oval_red"
    android:id="@+id/item_layout_thing"
    android:layout_margin="16dp"
    >

    <TextView style="@style/add_category_add_field"
        android:text="Name : Refreigator "
        android:padding="10dp"
        android:textColor="#fff"
        android:id="@+id/item_name_things"
        />

    <TextView style="@style/add_category_add_field"
        android:text="@string/price"
        android:padding="10dp"
        android:textColor="#fff"
        android:id="@+id/item_price_thing"

        />
    <TextView style="@style/add_category_add_field"
        android:text="@string/description"
        android:textStyle="normal"
        android:textSize="14sp"
        android:padding="10dp"
        android:layout_alignParentStart="true"
        android:textColor="#fff"
        android:id="@+id/item_desc_thing"
        />

    <TextView style="@style/add_category_add_field"
        android:text="Buy from: "
        android:textStyle="normal"
        android:textSize="14sp"
        android:padding="10dp"
        android:layout_alignParentStart="true"
        android:textColor="#fff"
        android:id="@+id/item_buy_from_thing"
        />

    <LinearLayout style="@style/add_category_Linear"
        android:padding="10dp"
        >



        <CheckBox
            style="@style/add_category_add_field"
            android:padding="10dp"
            android:text="@string/bought"
            android:layout_alignParentEnd="true"
            android:textStyle="normal"
            android:textSize="14sp"
            android:layout_weight="1"
            android:textColor="#fff"
            android:id="@+id/checkBought_thing"
            android:focusable="false"
            android:clickable="false"
            />


    </LinearLayout>
</LinearLayout>